--- a/src/styles.css
+++ b/src/styles.css
@@ -1,156 +1,101 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', sans-serif;
-    min-height: 130vh;
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+}
+
+html {
+  overflow-x: hidden;
+}
+
+body {
+  overflow: hidden;
 }
 
 ::-moz-focus-inner {
-    border: 0;
+  border: 0;
 }
 
-header{
-    position: relative;
-    height: 550px;
+.container {
+  background-image: url("../images/ct_manhattan.jpg");
+  background-size: 100% 100%;
 }
 
-.navbar{
-    position: fixed;
-    width: 100%;
-    display: flex;
+.container-wrapper {
+  background-color: rgba(23, 24, 32, 0.7);
+  position: relative;
 }
 
-.navbar .panel-left {
-    flex: 1;
-    display: flex;
+/* mobile */
+@media (max-width: 480px) {
+  .container {
+    background-size: 100% 25%;
+    background-repeat: repeat-y;
+  }
+  .is-desktop {
+    display: none !important;
+  }
+  .is-tablet {
+    display: none !important;
+  }
 }
 
-.navbar .panel-left .triangle-left{
-    border-width: 70px 35px 0 0;
-    border-color: white transparent transparent transparent;
+/* @media (min-width: 481px) and (max-width: 1279px) {
+  .is-desktop {
+    display: none !important;
+  }
+  .is-tablet {
+    display: inherit;
+  }
+} */
+@media (min-width: 768px) and (max-width: 1279px) and (max-height: 800px) {
+  .container {
+    background-attachment: fixed;
+  }
+  .is-desktop {
+    display: none !important;
+  }
+
+  .is-tablet {
+    display: inherit;
+  }
 }
 
-.navbar .panel-left .logo-container {
-    display: flex;
-    background-color: white;
-    padding-left: 40px;
-    padding-right: 80px;
-    box-sizing: border-box;
-    align-items: center;
-    height: 70px;
+@media (min-width: 481px) and (max-width: 800px) and (min-height: 962px) and (max-height: 1280px) {
+  .container {
+    background-attachment: fixed;
+  }
+
+  .is-desktop {
+    display: none !important;
+  }
+
+  .is-tablet {
+    display: inherit;
+  }
 }
 
-.logo-container h2  {
-    margin: 0;
-    letter-spacing: 2px;
-    font-weight: bold;
-    text-shadow: 0 1px 1px black;
-    font-size: 25px;
-    color: #87CEEB;
-}
-.logo-container .title {
-    margin-left: 30px;
-}
-
-.logo-container .subtitle {
-    margin-left: 100px;
+/* dekstop */
+@media (min-width: 1280px) and (max-width: 1536px) {
+  .container {
+    background-attachment: fixed;
+  }
+  .is-desktop {
+    display: inherit;
+  }
+  .is-tablet {
+    display: inherit;
+  }
 }
 
-
-.navbar .panel-right {
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.navbar .panel-right .links-container {
-    display: flex;
-    justify-content: flex-end;
-    background-color: white;
-    padding: 0 20px;
-    box-sizing: border-box;
-    align-items: center;
-    height: 70px;
-}
-
-.navbar .panel-right .triangle-right{
-    border-width: 0 0 70px 35px;
-    border-color: transparent transparent white transparent;
-}
-
-.triangle {
-    border-style: solid;
-    width: 0;
-    height: 0;
-}
-
-.triangle-left-small {
-    border-width: 0 0 38px 18px;
-    border-color: transparent transparent #87CEEB transparent;
-}
-
-.triangle-right-small {
-    border-width: 38px 18px 0 0;
-    border-color: #87CEEB transparent transparent transparent;
-    margin-right: 10px;
-}
-
-.navbar a {
-    text-decoration: none;
-    border-radius: 1px;
-    padding: 4px 12px;
-    max-height: 38px;
-    min-height: 38px;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: bold;
-    letter-spacing: 0.5px;
-    text-transform: uppercase;
-    color: #87CEEB;
-    border: 3px solid #87CEEB;
-    box-sizing: border-box;
-    background: linear-gradient(235deg, transparent 50%, #87CEEB 50%);
-    background-size: 200% 200%;
-    background-position: right top;
-    transition: all .3s ease-out;
-}
-
-.navbar a:hover {
-    background-position: left bottom;
-    color:  white;
-    cursor: pointer;
-}
-
-
-.exposition-background-image {
-    background: url(/src/images/ct_k_m.jpg); 
-    background-size: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100%;
-    width: 100%;
-}
-
-.exposition-opacity {
-    height: 100%;
-    background: linear-gradient(to bottom, rgba(135, 206, 235, 0.6), rgba(135, 206, 235, 1)); 
-}
-
-.exposition-border-down {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: -35px;
-    height: 35px;
-    background-color: #87CEEB;
-    clip-path: polygon(100% 10%, 75% 100%, 50% 10%, 25% 100%, 0% 10%, 0 0, 100% 0);
-}
-
-section{
-
-}
-
-
-footer {
-
+@media (min-width: 1537px) {
+  .container {
+    background-attachment: fixed;
+  }
+  .is-desktop {
+    display: inherit;
+  }
+  .is-tablet {
+    display: inherit;
+  }
 }
