--- a/src/footer.css
+++ b/src/footer.css
@@ -2,7 +2,7 @@ footer {
   background-color: #171820;
   display: flex;
   flex-wrap: wrap;
-  padding: 25px 50px;
+  padding: 25px 10%;
   box-sizing: border-box;
 }
 
@@ -15,39 +15,35 @@ footer .label {
   font-weight: bold;
   width: max-content;
   margin: 15px 0 6px;
-  font-family: "Josefin Sans", sans-serif;
-  padding-bottom: 2px;
+  font-family: "Rosa", sans-serif;
   border-bottom: solid 2px #fdc029;
+  box-sizing: border-box;
+  padding: 0 5px 2px;
 }
 
 footer .text {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Rosa", sans-serif;
   color: #f1f1f1;
   display: block;
   font-weight: lighter;
   letter-spacing: 0.05em;
-  margin: 0 0 3px;
+  margin: 0;
+  padding: 0 5px 3px;
+  box-sizing: border-box;
+  word-wrap: break-word;
 }
 
 @media (max-width: 480px) {
-  /* mobile */
   footer .row {
     width: 100%;
-  }
-
-  .timer-item {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
 }
 
 @media (min-width: 481px) and (max-width: 1279px) {
-  footer .label {
-    font-size: 15px;
-    line-height: 19px;
-  }
-  footer .text {
-    font-size: 14px;
-    line-height: 16px;
+  footer .row {
+    width: 100%;
+    margin-bottom: 20px;
   }
 }
 
