--- a/src/map.css
+++ b/src/map.css
@@ -1,34 +1,34 @@
 #map {
   position: relative;
   background-color: transparent;
-  padding: 100px 0;
+  padding: 0 0 100px;
 }
 
 #map::after {
-  top: 0;
+  bottom: 0;
   left: 0;
   content: "";
   position: absolute;
-  border-top: 100px solid #fdc029;
-  border-left: 50vw solid transparent;
-  border-right: 50vw solid transparent;
-  border-bottom: 0 solid transparent;
+  border-top: 100px solid transparent;
+  border-left: 50vw solid #fdc029;
+  border-right: 50vw solid #fdc029;
+  border-bottom: 0 solid #fdc029;
 }
 
-.map-title-container {
+.map-title-wrapper-outer {
   width: 100%;
   display: flex;
   justify-content: center;
 }
 
-.map-title-wrapper {
+.map-title-wrapper-inner {
   background-color: #fdc029;
   border-radius: 4px;
   transform: scale(0);
 }
 
 .map-title {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Rosa", sans-serif;
   display: inline-block;
   text-align: center;
   color: #171820;
@@ -42,61 +42,78 @@
   transform: scale(1);
 }
 
-.maps-wrapper {
+.maps {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  padding: 5% 10%;
+  box-sizing: border-box;
 }
 
-.map-container {
+.map-wrapper {
   overflow: hidden;
   box-sizing: border-box;
 }
 
-.map-container iframe {
+.map-iframe-header {
+  padding: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: #fdc029;
+}
+
+.map-iframe-title {
+  color: #171820;
+  font-family: "Rosa", sans-serif;
+  margin: 0;
+  text-align: center;
+}
+
+.map-wrapper iframe {
   height: 300px;
   width: 100%;
   border: 1px solid #fdc029;
+  box-sizing: border-box;
 }
 
 /* mobile */
 @media (max-width: 480px) {
   #map::after {
-    border-top: 100px solid #fdc029;
+    border-top: 100px solid transparent;
   }
-  .map-title-wrapper {
+  .map-title-wrapper-inner {
     padding: 6px 24px;
     margin: 20px 0 0;
   }
   .map-title {
     font-size: 28px;
   }
-  .map-container {
+  .map-wrapper {
     width: 100%;
-    padding: 5%;
+    padding: 5% 0;
   }
-  .map-container iframe {
+  .map-wrapper iframe {
     height: 300px;
   }
 }
 
 @media (min-width: 481px) and (max-width: 1279px) {
   #map::after {
-    border-top: 125px solid #fdc029;
+    border-top: 125px solid transparent;
   }
-  .map-title-wrapper {
+  .map-title-wrapper-inner {
     padding: 6px 24px;
     margin: 50px 0 0;
   }
   .map-title {
     font-size: 30px;
   }
-  .map-container {
+  .map-wrapper {
     width: 100%;
-    padding: 5%;
+    padding: 5% 0;
   }
-  .map-container iframe {
+  .map-wrapper iframe {
     height: 400px;
   }
 }
@@ -104,40 +121,40 @@
 /* dekstop small*/
 @media (min-width: 1280px) and (max-width: 1536px) {
   #map::after {
-    border-top: 150px solid #fdc029;
+    border-top: 150px solid transparent;
   }
-  .map-title-wrapper {
+  .map-title-wrapper-inner {
     padding: 6px 24px;
     margin: 100px 0 0;
   }
   .map-title {
     font-size: 32px;
   }
-  .map-container {
-    width: 50%;
+  .map-wrapper {
+    width: 100%;
     padding: 2.5%;
   }
-  .map-container iframe {
+  .map-wrapper iframe {
     height: 500px;
   }
 }
 
 @media (min-width: 1537px) {
   #map::after {
-    border-top: 150px solid #fdc029;
+    border-top: 150px solid transparent;
   }
-  .map-title-wrapper {
+  .map-title-wrapper-inner {
     padding: 6px 24px;
     margin: 100px 0 0;
   }
   .map-title {
     font-size: 32px;
   }
-  .map-container {
-    width: 50%;
+  .map-wrapper {
+    width: 100%;
     padding: 2.5%;
   }
-  .map-container iframe {
+  .map-wrapper iframe {
     height: 500px;
   }
 }
