--- a/src/modal.css
+++ b/src/modal.css
@@ -34,6 +34,10 @@
   justify-content: center;
 }
 
+.modal-builder-container {
+  max-height: 70%;
+}
+
 .modal-card header {
   margin-bottom: 0px;
 }
@@ -66,7 +70,7 @@
 
 .modal-card h2 {
   color: #171820;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Rosa", sans-serif;
   text-align: center;
   font-weight: bold;
   margin: 0;
@@ -74,11 +78,12 @@
 }
 
 #promotion-modal {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Rosa", sans-serif;
+  height: 100%;
 }
 
 #promotion-modal h3 {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Rosa", sans-serif;
   text-align: center;
   padding: 5% 0;
 }
