--- a/src/nav.css
+++ b/src/nav.css
@@ -5,13 +5,42 @@ nav {
   box-sizing: border-box;
   align-items: center;
   z-index: 150;
-  transition: background-color 200ms ease-in, border-bottom-color 200ms ease-out;
+  transition: background-color 200ms ease-in, border-bottom-color 200ms ease-out,
+    height 200ms;
   background-color: transparent;
   border-bottom-color: transparent;
   border-bottom-width: 2px;
   border-bottom-style: solid;
-  height: 65px;
+  height: 90px;
   justify-content: space-between;
+  padding: 0 5%;
+}
+
+.brand-image-container {
+  position: relative;
+}
+
+.santa-hat {
+  width: 60px;
+  top: -11px;
+  right: -27px;
+  transition: all 0.2s ease-in;
+  position: absolute;
+}
+
+.nav-moving .santa-hat {
+  width: 40px;
+  top: -6px;
+  right: -17px;
+}
+
+.nav-brand {
+  display: flex;
+  background-color: transparent;
+  outline: none;
+  padding: 0;
+  border: none;
+  align-items: center;
 }
 
 .nav-main {
@@ -20,32 +49,50 @@ nav {
   flex: 1;
 }
 
-.image-wrapper {
-  margin-left: 4%;
-  /* height: 50px;
-  width: 50px;
-  box-sizing: border-box;
-  padding: 5px;
-  border-radius: 50%; */
+.brand-image {
+  width: 70px;
+  height: 70px;
+  transition: width 200ms ease-in-out, height 200ms ease-in-out;
+}
+
+.brand-bell {
+  width: 1px;
+  height: 50px;
+  background-color: #f1f1f1;
+  margin: 0 15px;
+}
+
+.brand-name {
+  color: #f1f1f1;
+  font-family: "Rosa", sans-serif;
+  font-size: 24px;
+  transition: font-size 200ms ease-in;
+  margin: 0;
 }
 
 .nav-moving {
   background-color: #171820;
   border-bottom-color: #fdc029;
+  height: 70px;
 }
 
-nav h2 {
-  margin-left: 20px;
-  color: #f1f1f1;
-  font-family: "Ubuntu", sans-serif;
-  font-size: 26px;
+.nav-moving .brand-image {
+  width: 50px;
+  height: 50px;
+}
+
+.nav-moving h2 {
+  font-size: 20px;
+}
+
+.nav-moving .nav-links button {
+  font-size: 20px;
 }
 
 .nav-links {
   display: flex;
   align-items: center;
-  margin-right: 4%;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Rosa", sans-serif;
 }
 
 .nav-links button {
@@ -53,9 +100,10 @@ nav h2 {
   background-color: transparent;
   position: relative;
   color: #f1f1f1;
-  font-size: 23px;
+  font-size: 24px;
   letter-spacing: 0.03em;
   font-weight: bold;
+  transition: font-size 200ms ease-in;
 }
 
 .nav-links button::after {
@@ -71,4 +119,102 @@ nav h2 {
 
 .nav-links button:hover::after {
   width: 100%;
+}
+
+.hamburger-icon {
+  display: flex;
+  flex-direction: column;
+  border: none;
+  outline: none;
+  padding: 0;
+  background-color: transparent;
+}
+
+.hamburger-bell {
+  margin: 2px 0;
+  width: 35px;
+  height: 5px;
+  background-color: #f1f1f1;
+  border-radius: 2.5px;
+}
+
+.hamburger-menu {
+  height: 100%;
+  overflow-y: auto;
+  position: fixed;
+  left: 0;
+  top: 0;
+  transition: transform 200ms ease-in, opacity 200ms ease-in;
+  width: 100%;
+  background-color: #171820;
+  border-bottom: 1px solid #fdc029;
+  z-index: 2000;
+  box-sizing: border-box;
+}
+
+.menu-open {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.menu-closed {
+  opacity: 0;
+  transform: translateX(100%);
+}
+
+.hamburger-container {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hamburger-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 0% 20%;
+  padding: 0 5%;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.hamburger-close {
+  background-color: transparent;
+  padding: 0;
+  border: none;
+  outline: none;
+}
+
+.hamburger-item {
+  margin-bottom: 50px;
+  background-color: transparent;
+  position: relative;
+  color: #f1f1f1;
+  font-size: 36px;
+  font-weight: bold;
+  width: 100%;
+}
+
+.hamburger-item:first-child {
+  margin-top: 50px;
+}
+
+.hamburger-item::after {
+  position: absolute;
+  content: "";
+  bottom: -6px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #fdc029;
+  transition: transform 500ms;
+  transform-origin: center center;
+  transform: scale(0);
+}
+
+.hamburger-item:hover::after {
+  transform: scale(1);
 }
