--- a/src/news.css
+++ b/src/news.css
@@ -1,11 +1,24 @@
-#promotion {
+#news {
   background-color: #fdc029;
   position: relative;
-  padding: 5% 0;
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Rosa", sans-serif;
 }
 
-#promotion::after {
+.news-title {
+  font-family: "Dancing Script", cursive;
+}
+
+.news-text {
+  font-family: "Dancing Script", cursive;
+}
+
+#news h3 {
+  text-align: center;
+  padding: 5% 0;
+  margin: 0;
+}
+
+/* #news::after {
   top: -100px;
   left: 0;
   content: "";
@@ -14,47 +27,47 @@
   border-left: 50vw solid #fdc029;
   border-right: 50vw solid #fdc029;
   border-bottom: 0 solid #fdc029;
-}
+} */
 
-#promotion h1 {
-  font-family: "Ubuntu", sans-serif;
+#news h1 {
+  font-family: "Rosa", sans-serif;
   text-align: center;
   margin: 0;
 }
 
 @media (max-width: 480px) {
-  #promotion {
+  #news {
     min-height: 300px;
   }
-  #promotion h1 {
+  #news h1 {
     font-size: 28px;
   }
 }
 
 @media (min-width: 481px) and (max-width: 1279px) {
-  #promotion {
+  #news {
     min-height: 300px;
   }
-  #promotion h1 {
+  #news h1 {
     font-size: 30px;
   }
 }
 
 @media (min-width: 1280px) and (max-width: 1536px) {
-  #promotion {
+  #news {
     min-height: 500px;
   }
-  #promotion h1 {
+  #news h1 {
     font-size: 32px;
   }
 }
 
 /* dekstop */
 @media (min-width: 1537px) {
-  #promotion {
+  #news {
     min-height: 650px;
   }
-  #promotion h1 {
+  #news h1 {
     font-size: 34px;
   }
 }
