--- a/src/timers.css
+++ b/src/timers.css
@@ -1,24 +1,32 @@
 #timers {
   background-color: #fdc029;
   box-sizing: border-box;
+  padding: 5% 10%;
+  position: relative;
+}
+
+.timers-triangle {
+  border-top: 100px solid #fdc029;
+  border-left: 50vw solid transparent;
+  border-right: 50vw solid transparent;
+  border-bottom: 0 solid transparent;
 }
 
 .timers-wrapper {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
-  align-items: flex-start;
   justify-content: center;
 }
 
 #timers .title {
   color: #171820;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Rosa", sans-serif;
   text-align: center;
 }
 
 .timer-item {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Rosa", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -39,18 +47,27 @@
 
 .timer-item h2 {
   margin: 0;
-  color: rgba(23, 24, 32, 0.6);
+  font-family: "Rosa", sans-serif;
+  color: rgba(23, 24, 32, 0.8);
   text-align: center;
+  padding: 0 10px;
+  box-sizing: border-box;
 }
 
 /* mobile */
 @media (max-width: 480px) {
-  #timers {
-    padding: 10%;
-  }
   #timers .title {
     font-size: 28px;
-    margin: 0 0 20px;
+    margin: 0 0 5%;
+  }
+
+  .timers-triangle {
+    border-top: 100px solid #fdc029;
+  }
+
+  .timer-item {
+    width: 100%;
+    margin-bottom: 100px;
   }
 
   #clients {
@@ -72,16 +89,17 @@
 }
 
 @media (min-width: 481px) and (max-width: 1279px) {
-  #timers {
-    padding: 5%;
-  }
   #timers .title {
     font-size: 30px;
-    margin: 0 0 40px;
+    margin: 0 0 5%;
   }
+  .timers-triangle {
+    border-top: 125px solid #fdc029;
+  }
+
   .timer-item {
     width: 100%;
-    margin-bottom: 4%;
+    margin-bottom: 80px;
   }
   #clients {
     transform: translateX(300%);
@@ -103,15 +121,17 @@
 
 /* dekstop */
 @media (min-width: 1280px) and (max-width: 1536px) {
-  #timers {
-    padding: 2.5%;
-  }
   #timers .title {
     font-size: 32px;
-    margin: 0 0 60px;
+    margin: 0 0 5%;
   }
+  .timers-triangle {
+    border-top: 150px solid #fdc029;
+  }
+
   .timer-item {
     width: 33%;
+    /* margin-bottom: 80px; */
   }
   #clients {
     transform: scale(0);
@@ -135,15 +155,17 @@
 }
 
 @media (min-width: 1537px) {
-  #timers {
-    padding: 2.5%;
-  }
   #timers .title {
     font-size: 32px;
-    margin: 0 0 60px;
+    margin: 0 0 80px;
+  }
+  .timers-triangle {
+    border-top: 150px solid #fdc029;
   }
   .timer-item {
     width: 33%;
+    margin-bottom: 80px;
+    /* margin-bottom: 4%; */
   }
   #clients {
     transform: scale(0);
