--- a/components/Nav/Nav.module.css
+++ b/components/Nav/Nav.module.css
@@ -1,4 +1,4 @@
-nav {
+.nav {
   width: 100%;
   display: flex;
   position: fixed;
@@ -16,7 +16,7 @@ nav {
   padding: 0 5%;
 }
 
-.brandimageContainer {
+.brandImageContainer {
   position: relative;
 }
 
@@ -34,7 +34,7 @@ nav {
   right: -17px;
 }
 
-.nav-brand {
+.navBrand {
   display: flex;
   background-color: transparent;
   outline: none;
@@ -43,7 +43,7 @@ nav {
   align-items: center;
 }
 
-.nav-main {
+.navMain {
   display: flex;
   align-items: center;
   flex: 1;
