--- a/components/Wrapper/Wrapper.module.css
+++ b/components/Wrapper/Wrapper.module.css
@@ -1,22 +1,4 @@
-body {
-  margin: 0;
-  padding: 0;
-  max-width: 100%;
-}
-
-html {
-  overflow-x: hidden;
-}
-
-body {
-  overflow: hidden;
-}
-
-::-moz-focus-inner {
-  border: 0;
-}
-
-.wrapper-outer {
+.wrapperOuter {
   background-size: 100% 100%;
 }
 
@@ -25,17 +7,17 @@ body {
   position: relative;
 }
 
-.offer-wrapper-outer {
-  background-image: url("../images/ct_kosciuszki_inside.jpg");
+.offerWrapperOuter {
+  /* background-image: url("../images/ct_kosciuszki_inside.jpg"); */
 }
 
-.main-wrapper-outer {
-  background-image: url("../images/ct_manhattan.jpg");
+.mainWrapperOuter {
+  /* background-image: url("../images/ct_manhattan.jpg"); */
 }
 
 /* mobile */
 @media (max-width: 480px) {
-  .wrapper-outer {
+  .wrapperOuter {
     background-size: 100% 25%;
     background-repeat: repeat-y;
   }
@@ -51,7 +33,7 @@ body {
 }
 
 @media (min-width: 768px) and (max-width: 1279px) and (max-height: 800px) {
-  .wrapper-outer {
+  .wrapperOuter {
     background-attachment: fixed;
   }
   .is-desktop {
@@ -66,7 +48,7 @@ body {
 }
 
 @media (min-width: 481px) and (max-width: 800px) and (min-height: 962px) and (max-height: 1280px) {
-  .wrapper-outer {
+  .wrapperOuter {
     background-attachment: fixed;
   }
 
@@ -84,7 +66,7 @@ body {
 }
 
 @media (min-width: 481px) and (max-width: 1279px) {
-  .wrapper-outer {
+  .wrapperOuter {
     background-attachment: fixed;
   }
 
@@ -103,7 +85,7 @@ body {
 
 /* desktop */
 @media (min-width: 1280px) and (max-width: 1536px) {
-  .wrapper-outer {
+  .wrapperOuter {
     background-attachment: fixed;
   }
   .is-desktop {
@@ -118,7 +100,7 @@ body {
 }
 
 @media (min-width: 1537px) {
-  .wrapper-outer {
+  .wrapperOuter {
     background-attachment: fixed;
   }
   .is-desktop {
