--- a/src/timers.css
+++ b/src/timers.css
@@ -5,14 +5,14 @@
   position: relative;
 }
 
-.timers-triangle {
+.timersTriangle {
   border-top: 100px solid #fdc029;
   border-left: 50vw solid transparent;
   border-right: 50vw solid transparent;
   border-bottom: 0 solid transparent;
 }
 
-.timers-wrapper {
+.timersWrapper {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
@@ -25,14 +25,14 @@
   text-align: center;
 }
 
-.timer-item {
+.timerItem {
   font-family: "Rosa", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.timer-icon {
+.timerIcon {
   height: 128px;
   width: 128px;
   color: #171820;
@@ -40,12 +40,12 @@
   margin-bottom: 20px;
 }
 
-.timer-item h1 {
+.timerItem h1 {
   font-size: 32px;
   margin: 0;
 }
 
-.timer-item h2 {
+.timerItem h2 {
   margin: 0;
   font-family: "Rosa", sans-serif;
   color: rgba(23, 24, 32, 0.8);
@@ -61,11 +61,11 @@
     margin: 0 0 5%;
   }
 
-  .timers-triangle {
+  .timersTriangle {
     border-top: 100px solid #fdc029;
   }
 
-  .timer-item {
+  .timerItem {
     width: 100%;
     margin-bottom: 100px;
   }
@@ -93,11 +93,11 @@
     font-size: 30px;
     margin: 0 0 5%;
   }
-  .timers-triangle {
+  .timersTriangle {
     border-top: 125px solid #fdc029;
   }
 
-  .timer-item {
+  .timerItem {
     width: 100%;
     margin-bottom: 80px;
   }
@@ -125,11 +125,11 @@
     font-size: 32px;
     margin: 0 0 5%;
   }
-  .timers-triangle {
+  .timersTriangle {
     border-top: 150px solid #fdc029;
   }
 
-  .timer-item {
+  .timerItem {
     width: 33%;
     /* margin-bottom: 80px; */
   }
@@ -159,10 +159,10 @@
     font-size: 32px;
     margin: 0 0 80px;
   }
-  .timers-triangle {
+  .timersTriangle {
     border-top: 150px solid #fdc029;
   }
-  .timer-item {
+  .timerItem {
     width: 33%;
     margin-bottom: 80px;
     /* margin-bottom: 4%; */
