--- a/components/Map/Map.module.css
+++ b/components/Map/Map.module.css
@@ -1,10 +1,10 @@
-#map {
+.map {
   position: relative;
   background-color: transparent;
   padding: 0 0 100px;
 }
 
-#map::after {
+.map::after {
   bottom: 0;
   left: 0;
   content: "";
@@ -15,19 +15,19 @@
   border-bottom: 0 solid #fdc029;
 }
 
-.map-title-wrapperOuter {
+.mapTitlewrapperOuter {
   width: 100%;
   display: flex;
   justify-content: center;
 }
 
-.map-title-wrapper-inner {
+.mapTitlewrapperInner {
   background-color: #fdc029;
   border-radius: 4px;
   transform: scale(0);
 }
 
-.map-title {
+.mapTitle {
   font-family: "Rosa", sans-serif;
   display: inline-block;
   text-align: center;
@@ -37,7 +37,7 @@
   margin: 0;
 }
 
-.map-title-animated {
+.mapTitleAnimated {
   transition: transform 600ms;
   transform: scale(1);
 }
@@ -51,26 +51,26 @@
   box-sizing: border-box;
 }
 
-.map-wrapper {
+.mapWrapper {
   overflow: hidden;
   box-sizing: border-box;
 }
 
-.map-iframe-header {
+.mapIframeHeader {
   padding: 10px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   background-color: #fdc029;
 }
 
-.map-iframe-title {
+.mapIframeTitle {
   color: #171820;
   font-family: "Rosa", sans-serif;
   margin: 0;
   text-align: center;
 }
 
-.map-wrapper iframe {
+.mapWrapper iframe {
   height: 300px;
   width: 100%;
   border: 1px solid #fdc029;
@@ -79,82 +79,82 @@
 
 /* mobile */
 @media (max-width: 480px) {
-  #map::after {
+  .map::after {
     border-top: 100px solid transparent;
   }
-  .map-title-wrapper-inner {
+  .mapTitlewrapperInner {
     padding: 6px 24px;
     margin: 20px 0 0;
   }
-  .map-title {
+  .mapTitle {
     font-size: 28px;
   }
-  .map-wrapper {
+  .mapWrapper {
     width: 100%;
     padding: 5% 0;
   }
-  .map-wrapper iframe {
+  .mapWrapper iframe {
     height: 300px;
   }
 }
 
 @media (min-width: 481px) and (max-width: 1279px) {
-  #map::after {
+  .map::after {
     border-top: 125px solid transparent;
   }
-  .map-title-wrapper-inner {
+  .mapTitlewrapperInner {
     padding: 6px 24px;
     margin: 50px 0 0;
   }
-  .map-title {
+  .mapTitle {
     font-size: 30px;
   }
-  .map-wrapper {
+  .mapWrapper {
     width: 100%;
     padding: 5% 0;
   }
-  .map-wrapper iframe {
+  .mapWrapper iframe {
     height: 400px;
   }
 }
 
 /* dekstop small*/
 @media (min-width: 1280px) and (max-width: 1536px) {
-  #map::after {
+  .map::after {
     border-top: 150px solid transparent;
   }
-  .map-title-wrapper-inner {
+  .mapTitlewrapperInner {
     padding: 6px 24px;
     margin: 100px 0 0;
   }
-  .map-title {
+  .mapTitle {
     font-size: 32px;
   }
-  .map-wrapper {
+  .mapWrapper {
     width: 100%;
     padding: 2.5%;
   }
-  .map-wrapper iframe {
+  .mapWrapper iframe {
     height: 500px;
   }
 }
 
 @media (min-width: 1537px) {
-  #map::after {
+  .map::after {
     border-top: 150px solid transparent;
   }
-  .map-title-wrapper-inner {
+  .mapTitlewrapperInner {
     padding: 6px 24px;
     margin: 100px 0 0;
   }
-  .map-title {
+  .mapTitle {
     font-size: 32px;
   }
-  .map-wrapper {
+  .mapWrapper {
     width: 100%;
     padding: 2.5%;
   }
-  .map-wrapper iframe {
+  .mapWrapper iframe {
     height: 500px;
   }
 }
