--- a/components/Service/Service.module.css
+++ b/components/Service/Service.module.css
@@ -1,4 +1,4 @@
-#service {
+.service {
   background-color: #fdc029;
   box-sizing: border-box;
   padding: 100px 7.5%;
@@ -6,7 +6,7 @@
   font-family: "Rosa", sans-serif;
 }
 
-#service::after {
+.service::after {
   top: 100%;
   left: 0;
   content: "";
@@ -25,7 +25,7 @@
   vertical-align: middle;
 }
 
-#service h1 {
+.service h1 {
   align-self: flex-end;
 }
 
@@ -170,7 +170,7 @@
 }
 
 @media (max-width: 480px) {
-  #service h1 {
+  .service h1 {
     align-self: center;
   }
 
@@ -213,7 +213,7 @@
 }
 
 @media (min-width: 481px) and (max-width: 1279px) {
-  #service h1 {
+  .service h1 {
     align-self: center;
   }
   .offer h1 {
