--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,3 +16,18 @@ html {
 ::-moz-focus-inner {
   border: 0;
 }
+
+button {
+  padding: 0;
+  border: none;
+  outline: none;
+  z-index: 500;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+}
