--- a/components/Nav/Nav.module.css
+++ b/components/Nav/Nav.module.css
@@ -28,7 +28,7 @@
   position: absolute;
 }
 
-.navMoving .santa-hat {
+.navBackground .santa-hat {
   width: 40px;
   top: -6px;
   right: -17px;
@@ -70,22 +70,22 @@
   margin: 0;
 }
 
-.navMoving {
+.navBackground {
   background-color: #171820;
   border-bottom-color: #fdc029;
   height: 70px;
 }
 
-.navMoving .brandImage {
+.navBackground .brandImage {
   width: 50px;
   height: 50px;
 }
 
-.navMoving h2 {
+.navBackground h2 {
   font-size: 20px;
 }
 
-.navMoving .navLinks button {
+.navBackground .navLinks button {
   font-size: 20px;
 }
 
@@ -238,4 +238,56 @@
 
 .hamburgerItem:hover::after {
   transform: scale(1);
+}
+
+@media (min-width: 320px) {
+  .navLinks {
+    display: none;
+  }
+  /* smartphones, iPhone, portrait 480x320 phones */
+}
+@media (min-width: 481px) {
+  .navLinks {
+    display: none;
+  }
+  /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
+}
+@media (min-width: 641px) {
+  /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+  .navLinks {
+    display: none;
+  }
+}
+@media (min-width: 961px) {
+  .hamburgerMenu,
+  .hamburgerIcon {
+    display: none;
+  }
+
+  .navLinks {
+    display: flex;
+  }
+  /* tablet, landscape iPad, lo-res laptops ands desktops */
+}
+@media (min-width: 1025px) {
+  .hamburgerMenu,
+  .hamburgerIcon {
+    display: none;
+  }
+
+  .navLinks {
+    display: flex;
+  }
+  /* big landscape tablets, laptops, and desktops */
+}
+@media (min-width: 1281px) {
+  /* hi-res laptops and desktops */
+  .hamburgerMenu,
+  .hamburgerIcon {
+    display: none;
+  }
+
+  .navLinks {
+    display: flex;
+  }
 }
