--- a/components/Service/Service.module.css
+++ b/components/Service/Service.module.css
@@ -97,6 +97,49 @@
   justify-content: space-around;
   width: 100%;
   position: absolute;
+  animation-duration: 8000ms;
+  animation-iteration-count: infinite;
+}
+
+.serviceAnimation.show {
+  animation-name: opacityFromOut;
+}
+
+.serviceAnimation.hide {
+  animation-name: opacityFromIn;
+}
+
+@keyframes opacityFromOut {
+  0% {
+    opacity: 0;
+  }
+  12.5% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  62.5% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes opacityFromIn {
+  0% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .offerImages img {
