Add Service and Accessories opacity animation. Apply Timers animation

--- a/components/Accessories/Accessories.module.css
+++ b/components/Accessories/Accessories.module.css
@@ -99,6 +99,52 @@
   justify-content: space-around;
   width: 100%;
   position: absolute;
+  animation-duration: 8000ms;
+  animation-iteration-count: infinite;
+}
+
+.serviceAnimationFromOut {
+  animation-name: opacityFromOut;
+}
+
+.serviceAnimationFromIn {
+  animation-name: opacityFromIn;
+}
+
+@keyframes opacityFromOut {
+  0% {
+    opacity: 0;
+  }
+  37.5% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  87.5% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes opacityFromIn {
+  0% {
+    opacity: 1;
+  }
+  37.5% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  87.5% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .offerImages img {
