--- a/components/Map/Map.module.css
+++ b/components/Map/Map.module.css
@@ -9,10 +9,10 @@
   left: 0;
   content: "";
   position: absolute;
-  border-top: 100px solid transparent;
+  /* border-top: 100px solid transparent;
   border-left: 50vw solid #fdc029;
   border-right: 50vw solid #fdc029;
-  border-bottom: 0 solid #fdc029;
+  border-bottom: 0 solid #fdc029; */
 }
 
 .mapTitlewrapperOuter {
