--- a/components/Service/Service.module.css
+++ b/components/Service/Service.module.css
@@ -101,11 +101,11 @@
   animation-iteration-count: infinite;
 }
 
-.serviceAnimation.show {
+.serviceAnimationFromOut {
   animation-name: opacityFromOut;
 }
 
-.serviceAnimation.hide {
+.serviceAnimationFromIn {
   animation-name: opacityFromIn;
 }
 
@@ -113,14 +113,14 @@
   0% {
     opacity: 0;
   }
-  12.5% {
-    opacity: 1;
+  37.5% {
+    opacity: 0;
   }
   50% {
     opacity: 1;
   }
-  62.5% {
-    opacity: 0;
+  87.5% {
+    opacity: 1;
   }
   100% {
     opacity: 0;
@@ -131,10 +131,13 @@
   0% {
     opacity: 1;
   }
-  25% {
+  37.5% {
+    opacity: 1;
+  }
+  50% {
     opacity: 0;
   }
-  75% {
+  87.5% {
     opacity: 0;
   }
   100% {
@@ -182,14 +185,22 @@
   }
 }
 
+.imageLabelWrapper {
+  position: relative;
+  width: 100%;
+}
+
 .imageLabel {
   text-align: center;
+  position: absolute;
   font-weight: bold;
   background-color: #fdc029;
   border-radius: 6px;
   padding: 6px;
-  width: max-content;
+  width: 100%;
   margin: 60px 0 0;
+  animation-duration: 8000ms;
+  animation-iteration-count: infinite;
 }
 
 .slideAnimationLeft {
