Implement floating action button to header

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -154,6 +154,10 @@
   margin: 0 5%;
 }
 
+.floatingButtonWrapper {
+  display: block;
+}
+
 /* mobile */
 @media (max-width: 480px) {
   .jumbotron {
