--- a/components/ActionButton/ActionButton.module.css
+++ b/components/ActionButton/ActionButton.module.css
@@ -10,21 +10,20 @@
   justify-content: center;
   width: max-content;
   color: #f1f1f1;
-  transition: transform 200ms ease-in, width 200ms ease-in;
+  /* transition: transform 200ms ease-in, width 200ms ease-in; */
   font-size: 16px;
   line-height: 20px;
   box-sizing: border-box;
   font-weight: bold;
   border-radius: 99px;
   padding: 12px 6px;
-  height: 52px;
   margin: 5px 0;
   cursor: pointer;
 }
 
 .floatingButton {
   position: fixed;
-  right: -52px;
+  right: 3vw;
 }
 
 .actionButton:hover {
@@ -73,13 +72,13 @@
 }
 
 .callButton.floatingButton {
-  bottom: 4vw;
+  bottom: 3vw;
 }
 .directionButton.floatingButton {
-  bottom: calc(4vw + 52px);
+  bottom: calc(3vw + 55px);
 }
 .opinionButton.floatingButton {
-  bottom: calc(4vw + 104px);
+  bottom: calc(3vw + 110px);
 }
 
 @media (max-width: 480px) {
