--- a/components/Timers/Timers.module.css
+++ b/components/Timers/Timers.module.css
@@ -36,7 +36,7 @@
   height: 128px;
   width: 128px;
   color: #171820;
-  font-size: 128px;
+  font-size: 128px !important;
   margin-bottom: 20px;
 }
 
