--- a/styles/Slide.module.css
+++ b/styles/Slide.module.css
@@ -1,7 +1,3 @@
-.slide {
-  transition: transform 600ms ease-out, opacity 1200ms ease-out;
-}
-
 .slideOut {
   opacity: 0;
   transform: translateY(100%);
@@ -10,4 +6,41 @@
 .slideIn {
   opacity: 1;
   transform: translateY(0);
+}
+
+@media (min-width: 320px) {
+  .slide {
+    transition: transform 800ms ease-out, opacity 1400ms ease-out;
+  }
+  /* smartphones, iPhone, portrait 480x320 phones */
+}
+@media (min-width: 481px) {
+  .slide {
+    transition: transform 800ms ease-out, opacity 1400ms ease-out;
+  }
+  /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
+}
+@media (min-width: 641px) {
+  /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+  .slide {
+    transition: transform 800ms ease-out, opacity 1400ms ease-out;
+  }
+}
+@media (min-width: 961px) {
+  .slide {
+    transition: transform 600ms ease-out, opacity 1200ms ease-out;
+  }
+  /* tablet, landscape iPad, lo-res laptops ands desktops */
+}
+@media (min-width: 1025px) {
+  .slide {
+    transition: transform 600ms ease-out, opacity 1200ms ease-out;
+  }
+  /* big landscape tablets, laptops, and desktops */
+}
+@media (min-width: 1281px) {
+  /* hi-res laptops and desktops */
+  .slide {
+    transition: transform 600ms ease-out, opacity 1200ms ease-out;
+  }
 }
