--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,3 +32,27 @@ button:hover {
 a {
   text-decoration: none;
 }
+
+:root {
+  --fontPrimary: "Rosa", sans-serif;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --colorPrimary: #fdc029;
+    /* --colorSecondary: ; */
+    --colorBlack: #171820;
+    --colorWhite: #f1f1f1;
+    --colorRed: #f20000;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --colorPrimary: #fdc029;
+    /* --colorSecondary: ; */
+    --colorBlack: #171820;
+    --colorWhite: #f1f1f1;
+    --colorRed: #f20000;
+  }
+}
