--- a/components/ActionButton/ActionButton.module.css
+++ b/components/ActionButton/ActionButton.module.css
@@ -3,13 +3,13 @@
   border: none;
   outline: none;
   z-index: 500;
-  font-family: "Rosa", sans-serif;
+  font-family: var(--fontPrimary);
   box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: center;
   width: max-content;
-  color: #f1f1f1;
+  color: var(--colorWhite);
   /* transition: transform 200ms ease-in, width 200ms ease-in; */
   font-size: 16px;
   line-height: 20px;
@@ -42,7 +42,7 @@
   font-size: 16px;
   width: 24px;
   line-height: 24px;
-  background-color: #f1f1f1;
+  background-color: var(--colorWhite);
   border-radius: 50%;
   margin: 0 6px;
 }
