--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -42,10 +42,10 @@
 }
 
 .jumbotronTitle {
-  color: #f1f1f1;
+  color: var(--colorWhite);
   position: relative;
   width: max-content;
-  font-family: "Rosa", sans-serif;
+  font-family: var(--fontPrimary);
 }
 
 .jumbotronTitle::after {
@@ -55,7 +55,7 @@
   bottom: -5px;
   height: 5px;
   width: 0;
-  background-color: #fdc029;
+  background-color: var(--colorPrimary);
   animation: title-bell-animation 400ms linear 800ms 1 normal forwards;
 }
 
@@ -71,7 +71,7 @@
 .jumbotronBell {
   width: 5px;
   height: 100%;
-  background-color: #fdc029;
+  background-color: var(--colorPrimary);
   margin-left: 5%;
 }
 
@@ -85,7 +85,7 @@
   left: -5px;
   top: 0;
   width: 5px;
-  background-color: #fdc029;
+  background-color: var(--colorPrimary);
   height: 0;
   animation: details-bell-animation 400ms linear 400ms 1 normal forwards;
 }
@@ -102,8 +102,8 @@
 .jumbotronDescription {
   font-size: 40px;
   margin: 50px 0 50px 5%;
-  color: #f1f1f1;
-  font-family: "Rosa", sans-serif;
+  color: var(--colorWhite);
+  font-family: var(--fontPrimary);
 }
 
 .jumbotronDescription p {
@@ -141,7 +141,7 @@
     height: 4px;
   }
   100% {
-    background-color: #fdc029;
+    background-color: var(--colorPrimary);
     height: 4px;
   }
 }
