--- a/components/Map/Map.module.css
+++ b/components/Map/Map.module.css
@@ -10,9 +10,9 @@
   content: "";
   position: absolute;
   /* border-top: 100px solid transparent;
-  border-left: 50vw solid #fdc029;
-  border-right: 50vw solid #fdc029;
-  border-bottom: 0 solid #fdc029; */
+  border-left: 50vw solid var(--colorPrimary);
+  border-right: 50vw solid var(--colorPrimary);
+  border-bottom: 0 solid var(--colorPrimary); */
 }
 
 .mapTitlewrapperOuter {
@@ -22,15 +22,15 @@
 }
 
 .mapTitlewrapperInner {
-  background-color: #fdc029;
+  background-color: var(--colorPrimary);
   border-radius: 4px;
 }
 
 .mapTitle {
-  font-family: "Rosa", sans-serif;
+  font-family: var(--fontPrimary);
   display: inline-block;
   text-align: center;
-  color: #171820;
+  color: var(--colorBlack);
   letter-spacing: 0.5px;
   font-weight: bold;
   margin: 0;
@@ -54,12 +54,12 @@
   padding: 10px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  background-color: #fdc029;
+  background-color: var(--colorPrimary);
 }
 
 .mapIframeTitle {
-  color: #171820;
-  font-family: "Rosa", sans-serif;
+  color: var(--colorBlack);
+  font-family: var(--fontPrimary);
   margin: 0;
   text-align: center;
 }
@@ -67,7 +67,7 @@
 .mapWrapper iframe {
   height: 300px;
   width: 100%;
-  border: 1px solid #fdc029;
+  border: 1px solid var(--colorPrimary);
   box-sizing: border-box;
 }
 
