--- a/components/Service/Service.module.css
+++ b/components/Service/Service.module.css
@@ -63,7 +63,7 @@
   color: var(--colorWhite);
   border-radius: 10px;
   padding: 10px;
-  box-shadow: 2px 2px 5px 1px rgba(23, 24, 32, 0.5);
+  box-shadow: 2px 2px 5px 1px rgba(var(--colorBlackRGB), 0.5);
 }
 
 .offerList li::before {
@@ -171,7 +171,7 @@
 }
 
 .serviceImageWrapper::after {
-  box-shadow: 0 45px 15px 0px rgba(253, 192, 41, 0.5);
+  box-shadow: 0 45px 15px 0px rgba(var(--colorPrimaryRGB), 0.5);
 }
 
 @keyframes levitate {
