--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,19 +40,29 @@ a {
 @media (prefers-color-scheme: light) {
   :root {
     --colorPrimary: #fdc029;
-    /* --colorSecondary: ; */
     --colorBlack: #171820;
     --colorWhite: #f1f1f1;
     --colorRed: #f20000;
+    --colorCallButton: #008000;
+    --colorRoadButton: #df861d;
+    --colorOpinionButton: #aa3d01;
+
+    --colorBlackRGB: 23, 24, 32;
+    --colorPrimaryRGB: 253, 192, 41;
   }
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --colorPrimary: #fdc029;
-    /* --colorSecondary: ; */
     --colorBlack: #171820;
     --colorWhite: #f1f1f1;
     --colorRed: #f20000;
+    --colorCallButton: #008000;
+    --colorRoadButton: #df861d;
+    --colorOpinionButton: #aa3d01;
+
+    --colorBlackRGB: 23, 24, 32;
+    --colorPrimaryRGB: 253, 192, 41;
   }
 }
