--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -24,7 +24,7 @@
   content: "";
   bottom: 0;
   width: 100%;
-  background-color: rgba(23, 24, 32, 0.7);
+  background-color: rgba(var(--colorBlackRGB), 0.7);
 }
 
 .jumbotronContainer {
@@ -120,7 +120,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  background-color: rgba(23, 24, 32, 1);
+  background-color: rgba(var(--colorBlackRGB), 1);
   content: "";
   bottom: -5px;
   left: 0;
@@ -137,7 +137,7 @@
     height: 100%;
   }
   90% {
-    background-color: rgba(23, 24, 32, 1);
+    background-color: rgba(var(--colorBlackRGB), 1);
     height: 4px;
   }
   100% {
