--- a/components/Accessory/Accessory.module.css
+++ b/components/Accessory/Accessory.module.css
@@ -13,16 +13,25 @@
   box-shadow: rgba(var(--colorPrimary), 0.25) 0px 50px 100px -20px,
     rgba(var(--colorPrimary), 0.3) 0px 30px 60px -30px;
   height: 250px;
+  display: flex;
+  /* flex-direction: column; */
+  /* justify-items: flex-end; */
+  align-items: flex-end;
 }
 
-.accessoryImageWrapper {
-  position: relative;
-  padding: 2.5%;
-  padding: 10%;
-  box-sizing: border-box;
-  height: 80%;
+.accessoryImageWrapperOuter {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   /* height: 400px; */
   /* max-width: 50%; */
+}
+
+.accessoryImageWrapperInner {
+  position: relative;
+  padding: 5% 5% 50px;
+  box-sizing: border-box;
+  height: 90%;
 }
 
 .accessoryImage {
@@ -33,10 +42,13 @@
 }
 
 .accessoryFooter {
+  /* width: 100%; */
+  flex: 1;
   display: flex;
   align-items: center;
   border-radius: 24px;
   padding: 12px;
+  z-index: 10;
   background-color: var(--colorWhite);
 }
 
@@ -63,6 +75,7 @@
 }
 
 .accessoryText {
+  margin: 0;
   /* font-size: 16px;
   line-height: 24px;
   color: var(--colorBlack); */
