--- a/components/Accessory/Accessory.module.css
+++ b/components/Accessory/Accessory.module.css
@@ -1,8 +1,6 @@
 .accessory {
   border-radius: 24px;
   background-color: var(--colorPrimary);
-  /* min-width: 200px; */
-  /* padding: 12px; */
   position: relative;
   background: linear-gradient(
     90deg,
@@ -12,19 +10,17 @@
   );
   box-shadow: rgba(var(--colorPrimary), 0.25) 0px 50px 100px -20px,
     rgba(var(--colorPrimary), 0.3) 0px 30px 60px -30px;
-  height: 250px;
+  height: 300px;
+  width: 300px;
   display: flex;
-  /* flex-direction: column; */
-  /* justify-items: flex-end; */
   align-items: flex-end;
+  justify-self: center;
 }
 
 .accessoryImageWrapperOuter {
   position: absolute;
   width: 100%;
   height: 100%;
-  /* height: 400px; */
-  /* max-width: 50%; */
 }
 
 .accessoryImageWrapperInner {
@@ -36,13 +32,11 @@
 
 .accessoryImage {
   object-fit: contain;
-  /* margin: 10%; */
   width: 100%;
   height: 100%;
 }
 
 .accessoryFooter {
-  /* width: 100%; */
   flex: 1;
   display: flex;
   align-items: center;
@@ -69,14 +63,22 @@
 }
 
 .accessoryTextWrapper {
-  font-size: 16px;
-  line-height: 24px;
   color: var(--colorBlack);
+  font-family: var(--fontPrimary);
 }
 
-.accessoryText {
+.accessoryTextWrapper p {
   margin: 0;
-  /* font-size: 16px;
+}
+
+.accessoryTextName {
+  margin: 0;
+  font-size: 16px;
   line-height: 24px;
-  color: var(--colorBlack); */
+}
+
+.accessoryTextPrice {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 27px;
 }
